Fixed z-index fight

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -235,7 +235,7 @@ a {
 	right: 0;
 	bottom: 0;
 	background-color: rgba(255, 255, 255, 0.8);
-	z-index: 10;
+	z-index: 99;
 }
 
 .app__mediaPreview__header {
